fix: get all users